Fri Oct  2 18:32:21 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/checking_visitor.h:
        * tools/IDL3_to_IDL2/be_global.cpp:
        * tools/IDL3_to_IDL2/be_produce.cpp:
        * tools/IDL3_to_IDL2/be_global.h:
        * tools/IDL3_to_IDL2/checking_visitor.cpp:
        
          Replaced the -x <filename> option, which manually
          excluded an IDL file include from getting its processed
          name decorated with '_IDL2', with a mechanims that
          detects automatically which included IDL files have
          no IDL3 constructs, and skips mangling their processed
          included name accordingly.
          
        * tests/IDL3/ImpliedIDL/All/all.mpc:
        * tests/IDL3/ImpliedIDL/All/pass_through.idl:
        
          Minor changes to this test of idl3_to_idl2.
          
        * tools/IDL3_to_IDL2/README:
        * docs/releasenotes/index.html:
        
          Updated documentation.

Fri Oct  2 18:30:12 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/DevGuideExamples/Messenger/Administrator_Client_IDL2.mpc:
        * examples/DevGuideExamples/Messenger/Messenger.mpc:
        
          Fixed some dependency problems.

Fri Oct  2 14:01:59 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
          Update working document.

Fri Oct  2 09:08:34 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI/AMI.mpc
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver.mpc
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.mpc
          Fix build orders and missing libraries

Fri Oct  2 08:36:22 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Base.idl:
        * performance-tests/Protocols/common/Protocols.idl:
        * tests/IDL_Test/Included_Component/IC_Foo.idl:
          Resolved some fuzz errors/warnings.
